<resources>
    <string name="app_name">Sound Sense</string>
    <string name="home">Home</string>
    <string name="Calendar">History</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="tv_calendar">기록</string>
    <string name="contextEditText">내용을 입력하시오</string>
    <string name="save_Btn">저장</string>
    <string name="cha_Btn">수정</string>
    <string name="del_Btn">삭제</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="chk_login">자동로그인</string>
    <string name="et_pass">비밀번호</string>
    <string name="btn_main">비회원 이용하기</string>
    <string name="textView8">"세탁이 끝났어요"</string>
    <string name="textView10">"초인종이 울려요"</string>
    <string name="textView11">"화재경보기가 울려요"</string>
    <string name="textView9">"아기가 울고 있어요"</string>
    <string name="textView6">아기 울음소리 알림</string>
    <string name="laundary_alermtv">세탁기 소리 알림</string>
    <string name="bell_alermtv">초인종 소리 알림</string>
    <string name="fire_alermtv">화재경보기 소리 알림</string>
    <string name="tv_vib1">진동주기:1번</string>
    <string name="tv_vib2">진동주기:2번</string>
    <string name="tv_vib3">진동주기:3번</string>
    <string name="tv_vib4">진동주기:4번</string>
    <string name="alerm_tv">알     림</string>
    <string name="vibe_tv">진동세기</string>
    <string name="logout_tv">로그아웃</string>
    <string name="data_dtv">데이터 삭제</string>
    <string name="logout_btn">로그아웃</string>
    <string name="lang_tv">언어설정</string>
    <string name="textView">회원가입</string>
    <string name="et_id">아이디</string>
    <string name="email_et">이메일</string>
    <string name="password_et">비밀번호</string>
    <string name="signup_bt">회원가입</string>
    <string name="kor">한국어</string>
    <string name="en">english</string>
    <string name="ja">日本語</string>
    <string name="bt_bluetooth">BLUETOOH</string>
    <string name="back_h">뒤로가기</string>
    <string name="del_btn">DELETE</string>
    <string name="his_btn">기록보기</string>
</resources>
