<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Setting">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp">


        <Button
            android:id="@+id/logout_btn"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:text="@string/logout_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.418" />


        <Button
            android:id="@+id/korea"
            android:layout_width="70dp"
            android:layout_height="40dp"

            android:text="@string/kor"
            android:textColor="@color/colorPrimaryText"
            app:backgroundTint="@color/cardview_light_background"
            app:layout_constraintEnd_toStartOf="@+id/eng"
            app:layout_constraintTop_toTopOf="@+id/eng" />

        <Button
            android:id="@+id/eng"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="356dp"
            android:text="@string/en"
            android:textColor="@color/colorPrimaryText"
            app:backgroundTint="@color/cardview_light_background"
            app:layout_constraintEnd_toStartOf="@+id/jap"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/jap"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_marginTop="356dp"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:text="@string/ja"
            android:textColor="@color/colorPrimaryText"
            app:backgroundTint="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/soundsense"
            android:layout_width="167dp"
            android:layout_height="63dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/soundsense" />

        <ImageView
            android:id="@+id/settingMy"
            android:layout_width="112dp"
            android:layout_height="103dp"
            android:layout_marginTop="156dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/setting" />

        <TextView
            android:id="@+id/logout_tv"
            android:layout_width="72dp"
            android:layout_height="35dp"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:text="@string/logout_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemBackground="@color/Bottom"
            app:itemIconTint="#2C2C88"
            app:itemTextColor="#2C2C88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.997"
            app:menu="@menu/menu_navigation" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="510dp">

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>