<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".History"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        //tools:context=".CalendarActivity"


        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/tv_calendar"
            android:textColor="@color/navy"
            android:textSize="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="332dp"
            android:layout_height="298dp"
            android:background="@color/colorWhite"
            android:weekSeparatorLineColor="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_calendar"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity= "center"
            android:id="@+id/diaryTextView"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/calendarView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary"
            android:text=""
            />



        <EditText
            android:id="@+id/contextEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:hint="@string/contextEditText"
            android:inputType="textMultiLine"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarView"
            />

        <Button
            android:id="@+id/save_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/save_Btn"
            app:layout_constraintBottom_toTopOf="@+id/his_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contextEditText"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/his_btn"
            android:layout_width="240dp"
            android:layout_height="64dp"
            android:text="@string/his_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.808" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="137dp"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:menu="@menu/menu_navigation"
        app:itemBackground="@color/Bottom"
        app:itemTextColor="#2C2C88"
        app:itemIconTint="#2C2C88"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>