<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="736dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="-2dp">

        <Button
        android:id="@+id/button_connect"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
            android:layout_marginBottom="5dp"
            android:text="bluetooth_connect"
            android:textColor="@color/colorPrimaryText"
            app:backgroundTint="@color/cardview_light_background"
            app:layout_constraintBottom_toTopOf="@+id/laundary_alermtv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/test_tv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/iv_baby"
            android:layout_width="157dp"
            android:layout_height="141dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baby" />

        <ImageView
            android:id="@+id/vib1"
            android:layout_width="47dp"
            android:layout_height="31dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_vib1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.391"
            app:srcCompat="@drawable/vib1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="176dp"
            android:layout_height="182dp"
            android:layout_marginTop="85dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:srcCompat="@drawable/landury" />

        <ImageView
            android:id="@+id/vib2"
            android:layout_width="47dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.391"
            app:srcCompat="@drawable/vib2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="166dp"
            android:layout_height="135dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/bell" />


        <ImageView
            android:id="@+id/vib3"
            android:layout_width="47dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855"
            app:srcCompat="@drawable/vib3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="158dp"
            android:layout_height="164dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.844"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.403"
            app:srcCompat="@drawable/fire" />

        <ImageView
            android:id="@+id/vib4"
            android:layout_width="47dp"
            android:layout_height="31dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855"
            app:srcCompat="@drawable/vib4" />


        <TextView
            android:id="@+id/test_tv"
            android:layout_width="265dp"
            android:layout_height="67dp"
            android:hint="durl"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.014" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="143dp"
            android:layout_height="23dp"
            android:layout_marginStart="262dp"
            android:layout_marginLeft="262dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:text='@string/textView8'
            android:textColor="#2C2C88"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.404"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.339" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="136dp"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="216dp"
            android:layout_marginRight="216dp"
            android:text='@string/textView10'
            android:textColor="#2C2C88"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.142"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.799" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="178dp"
            android:layout_height="27dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text='@string/textView11'
            android:textColor="#2C2C88"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.802" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="171dp"
            android:layout_height="22dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:text='@string/textView9'
            android:textColor="#2C2C88"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_baby"
            app:layout_constraintVertical_bias="0.236" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="#2C2C88"
            android:text="@string/textView6"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/laundary_alermtv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.097" />

        <TextView
            android:id="@+id/laundary_alermtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@color/colorBlue"
            android:text="@string/laundary_alermtv"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.849"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bell_alermtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="#2C2C88"
            android:text="@string/bell_alermtv"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fire_alermtv"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/fire_alermtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2C2C88"
            android:text="@string/fire_alermtv"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.921"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/tv_vib1"
            android:layout_width="115dp"
            android:layout_height="31dp"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="276dp"
            android:text="@string/tv_vib1"
            android:textColor="#2C2C88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_vib2"
            android:layout_width="117dp"
            android:layout_height="24dp"
            android:text="@string/tv_vib2"
            android:textColor="#2C2C88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toEndOf="@+id/vib2"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.027" />

        <TextView
            android:id="@+id/tv_vib3"
            android:layout_width="110dp"
            android:layout_height="25dp"
            android:text="@string/tv_vib3"
            android:textColor="#2C2C88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/vib4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/vib3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <TextView
            android:id="@+id/tv_vib4"
            android:layout_width="103dp"
            android:layout_height="26dp"
            android:text="@string/tv_vib4"
            android:textColor="#2C2C88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toEndOf="@+id/vib4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.855" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="171dp"
            android:layout_height="68dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toTopOf="@+id/bell_alermtv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_vib1"
            app:srcCompat="@drawable/logo2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/Bottom"
        app:itemTextColor="#2C2C88"
        app:itemIconTint="#2C2C88"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>